Tilføjelse af meta tags til forum indlæg

--- a/forum-inspiration.html
+++ b/forum-inspiration.html
@@ -56,6 +56,20 @@
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
               </p>
+              <div class="tag-wrap">
+              <div class="meta-tag">
+                Idé
+              </div>
+              <div class="meta-tag">
+                Vigtigt
+              </div>
+              <div class="meta-tag">
+                Dansk
+              </div>
+              <div class="meta-tag">
+                Hjælp
+              </div>
+            </div>
             </div>
             </a>
             <div class="traad-container">
@@ -65,6 +79,14 @@
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
               </p>
+              <div class="tag-wrap">
+              <div class="meta-tag">
+                Idé
+              </div>
+              <div class="meta-tag">
+                Hjælp
+              </div>
+            </div>
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
@@ -81,6 +103,17 @@
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
               </p>
+              <div class="tag-wrap">
+              <div class="meta-tag">
+                Vigtigt
+              </div>
+              <div class="meta-tag">
+                Dansk
+              </div>
+              <div class="meta-tag">
+                Hjælp
+              </div>
+            </div>
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
@@ -89,6 +122,20 @@
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
               </p>
+              <div class="tag-wrap">
+              <div class="meta-tag">
+                Idé
+              </div>
+              <div class="meta-tag">
+                Vigtigt
+              </div>
+              <div class="meta-tag">
+                Dansk
+              </div>
+              <div class="meta-tag">
+                Hjælp
+              </div>
+            </div>
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
@@ -97,6 +144,10 @@
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
               </p>
+              <div class="tag-wrap">
+              <div class="meta-tag">
+                Idé
+              </div>
             </div>
             <p class="forum-pagenumber">
               <a href="#"><b>1</b> 2 3 4 5 6 ... 13 <b></b>»</a>
