--- a/forum.html
+++ b/forum.html
@@ -59,6 +59,20 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Idé
+            </div>
+            <div class="meta-tag">
+              Vigtigt
+            </div>
+            <div class="meta-tag">
+              Dansk
+            </div>
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
           </a>
           <a href="forum-inspiration.html">
@@ -69,6 +83,14 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Idé
+            </div>
+            <div class="meta-tag">
+              Vigtigt
+            </div>
+          </div>
           </div>
         </a>
         <a href="forum-inspiration.html">
@@ -79,6 +101,14 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Dansk
+            </div>
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
         </a>
           <p class="forum-pagenumber">
@@ -96,6 +126,17 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Vigtigt
+            </div>
+            <div class="meta-tag">
+              Dansk
+            </div>
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
@@ -104,6 +145,14 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Dansk
+            </div>
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
@@ -130,6 +179,17 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Idé
+            </div>
+            <div class="meta-tag">
+              Dansk
+            </div>
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
@@ -138,6 +198,20 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Idé
+            </div>
+            <div class="meta-tag">
+              Vigtigt
+            </div>
+            <div class="meta-tag">
+              Dansk
+            </div>
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
@@ -146,6 +220,11 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
           <p class="forum-pagenumber">
             <a href="#"><b>1</b> 2 3 4 ... 6 <b></b>»</a>
@@ -170,6 +249,20 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Idé
+            </div>
+            <div class="meta-tag">
+              Vigtigt
+            </div>
+            <div class="meta-tag">
+              Dansk
+            </div>
+            <div class="meta-tag">
+              Hjælp
+            </div>
+          </div>
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
@@ -178,6 +271,17 @@
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
+            <div class="tag-wrap">
+            <div class="meta-tag">
+              Idé
+            </div>
+            <div class="meta-tag">
+              Vigtigt
+            </div>
+            <div class="meta-tag">
+              Dansk
+            </div>
+          </div>
           </div>
           <p class="forum-pagenumber">
             <a href="#"><b>1</b> 2 3 4 5 ... 8 <b></b>»</a>
