--- a/forum-inspiration.html
+++ b/forum-inspiration.html
@@ -33,13 +33,14 @@
               <h1 id="page-title">
                 <a href="forum.html">Forum</a> / <a href="forum-inspiration.html">Inspiration</a>
               </h1>
-              <div class="choices">
-                <h2>Nyeste</h2>
-                <div class="fa fa-caret-square-o-down">
+              <div class="filter_search">
+                <div class="filter">
+                  <h2>Filter</h2>
+                  <div class="fa fa-caret-square-o-down">
+                  </div>
                 </div>
-              </div>
-              <div class="search">
-                <h2>Søg</h2>
+                <input class="search" type="text" name="search" placeholder="   Søg">
+                </input>
               </div>
             </div>
         </header>
