--- a/materialer.html
+++ b/materialer.html
@@ -31,6 +31,15 @@
           <h1 id="page-title">
             Materialer
           </h1>
+          <div class="filter_search">
+            <div class="filter">
+              <h2>Filter</h2>
+              <div class="fa fa-caret-square-o-down">
+              </div>
+            </div>
+            <input class="search" type="text" name="search" placeholder="   Søg">
+            </input>
+          </div>
         </div>
     </header>
     <div id="wrapper">
