rediger profil knap

--- a/minprofil.html
+++ b/minprofil.html
@@ -35,7 +35,13 @@
           <div class="logout">
             <h2>Log ud</h2>
             <a href="signin.html">
-              <img src="assets/images/logout.png" alt="">
+              <img src="assets/images/logout.png" alt="logout">
+            </a>
+          </div>
+          <div class="edit">
+            <h2>Rediger profil</h2>
+            <a href="#">
+              <img src="assets/images/edit.png" alt="edit">
             </a>
           </div>
         </div>
