--- a/opgave-forholdsord.html
+++ b/opgave-forholdsord.html
@@ -46,14 +46,14 @@
             Downloads - 7
             <br />
             <img src="assets/images/kommentarer.png" class="kommentarerico">
-            Kommentarer - 13 
+            Kommentarer - 13
           </div>
         </div>
         <div class="opgave-row2">
           <div class="tekstboks-opgave">
-            <p class="opg-beskrivelse">In nam tempor delectus, ea tempor intellegat voluptaria per. Vel dico etiam equidem ex, ex alia fierent appellantur eam. Et sed eripuit disputando. Commune facilisi reformidans usu ex, pro ad graecis adipisci consequat.</p>
-            <p class="opg-beskrivelse">illum explicari mea. Porro eripuit bonorum eu pri, te possim abhorreant vel. Eam ne porro sonet, oporteat delicata ut sed. Soleat labitur convenire cum ad. Quo id alterum ponderum conceptam, ea mei quot choro probatus. Cetero disputationi vis in.</p>
-            <p class="opg-beskrivelse">Eu debet solet mel. In dicta graeci gubergren est. Eu mea ridens salutandi, sit et prodesset appellantur. At cum graece verear, quas argumentum pro et. Vivendo tacimates indoctum eos an, sea virtute praesent ei, et wisi commune reformidans usu.</p>
+            <p class="opg-beskrivelse">- af Trine Nørregaard</p>
+            <p class="opg-beskrivelse">Perfekt afsæt til en vellykket afgangsprøve. Alineas onlineprøver i dansk retskrivning gør det nemt og motiverende for både lærer og elever at forberede sig til afgangsprøven i dansk retskrivning. 30 retskrivningsprøver med fejltypeanalyse. Sitet indeholder 30 retskrivningsprøver i 3 niveauer</p>
+            <p class="opg-beskrivelse"> Matrialer <br></<b> Parpir, Blyant</p>
             <p class="opg-beskrivelse">In nam tempor delectus, ea tempor intellegat voluptaria per. Vel dico etiam equidem ex, ex alia fierent appellantur eam. Et sed eripuit disputando. Commune facilisi reformidans usu ex, pro ad graecis adipisci consequat.</p>
           </div>
           <a href="#"><img src="assets/images/download.knap.png" class="img-download"></a>
