--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/javascript.js" charset="utf-8"></script>
+  <meta property="og:title" content="KEDU" />
+  <meta property="og:description" content="An online curriculum platform for teachers all around the world.">
+  <meta name="description" content="KUBO Education (or KEDU for short) is KUBO’s online curriculum platform. If you’re a teacher or educator, head on over to find tutorials, exercises, videos, and inspiration. You can also share your own knowledge about KUBO and how to use it with other teachers and educators around the world.">
 </head>
 <body>
   <div class="logo_container">
@@ -29,7 +32,7 @@
       <div id="header_container">
           <div class="image_section1">
             <div class="picture-container">
-                <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
+                <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="Forbered dine elever til fremtiden">
                 <p class="text-on-picture">Læs mere</p>
               <div class="kasse1">
                   <h1 class="overskrift">Forbered dine elever til fremtiden</h1>
@@ -41,7 +44,7 @@
           </div>
           <div class="image_section1">
             <div class="picture-container">
-                <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
+                <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="Mangler du inspiration til undervisningen?">
                 <p class="text-on-picture">Læs mere</p>
               <div class="kasse1">
                 <h1 class="overskrift">Mangler du inspiration til undervisningen?</h1>
@@ -54,7 +57,7 @@
 
         <div class="image_section1">
             <div class="picture-container">
-                <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
+                <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="Lær kodning nu! Med Robotten KUBO">
                 <p class="text-on-picture">Læs mere</p>
               <div class="kasse1">
                 <h1 class="overskrift">Lær kodning nu! Med Robotten KUBO</h1>
@@ -71,7 +74,7 @@
     <div class="boks">
       <a href="forum-traad.html">
       <div class="boks-person">
-        <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
+        <img src="assets/images/dame1.png" alt="Dame 1" class="tilpas">
         <h2>Johanne Hansen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Jeg har virkelig svært ved at få mine elever til at  <br> lærer endelser. Er der en der har en god opgave de kan anbefale? Jeg er åben for de meste.... <br></p>
@@ -80,7 +83,7 @@
       </a>
       <a href="forum-traad.html">
       <div class="boks-person justify-boks">
-        <img src="assets/images/mand1.png" alt="mand1" class="tilpas">
+        <img src="assets/images/mand1.png" alt="Mand 1" class="tilpas">
         <h2>Lars Andersen</h2>
         <p class="overskrift">Erfaring med kodning?</p>
         <p class="beskrivelse">Jeg skal lave et forløb med mine elever omking kodning. Jeg har aldrig undervist <br>i det før, så jeg ville blive rigtig glad hvis... <br> </p>
@@ -89,7 +92,7 @@
     </a>
       <a href="forum-traad.html">
       <div class="boks-person">
-        <img src="assets/images/mand2.png" alt="mand1" class="tilpas">
+        <img src="assets/images/mand2.png" alt="Mand 2" class="tilpas">
         <h2>Mathias Schmidt</h2>
         <p class="overskrift">SE HER!</p>
         <p class="beskrivelse">Jeg har igår lavet denne opgave med mine elever. <br> Det fungerede rigtitg godt, og derfor vil jeg gerne dele den med jer.  <br></p>
@@ -98,7 +101,7 @@
     </a>
         <a href="forum-traad.html">
       <div class="boks-person justify-boks">
-        <img src="assets/images/unknown.png" alt="mand1" class="tilpas">
+        <img src="assets/images/unknown.png" alt="Mand 3" class="tilpas">
         <h2>Emil Olufsen</h2>
         <p class="overskrift">Er jeg helt galt på den?</p>
         <p class="beskrivelse">En kolega og jeg, diskutere hvorvidt der er rigtig eller forkert at bruge sådan en opgave som<br> denne? Jeg mener ikke den er relevant...<br></p>
@@ -107,7 +110,7 @@
     </a>
         <a href="forum-traad.html">
       <div class="boks-person">
-        <img src="assets/images/dame2.png" alt="mand1" class="tilpas">
+        <img src="assets/images/dame2.png" alt="Dame 2" class="tilpas">
         <h2>Kathrine Mauritsen</h2>
         <p class="overskrift">Kursus i tyskland?</p>
         <p class="beskrivelse">Er der nogen her inde der har erfaring med at tage på kursus i tyskland?<br> <br></p>
@@ -116,7 +119,7 @@
     </a>
       <a href="forum-traad.html">
       <div class="boks-person justify-boks">
-        <img src="assets/images/mand3.png" alt="mand1" class="tilpas">
+        <img src="assets/images/mand3.png" alt="Mand 4" class="tilpas">
         <h2>Olav Iversen</h2>
         <p class="overskrift">God inspiration til matematik i 2. klasse?</p>
         <p class="beskrivelse">Jeg er normalt sproglærer. Men jeg skal være vikar i matematik imorgen. og jeg har ingen ide om.. <br><br></p>
@@ -151,7 +154,7 @@
       <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
       <a href="https://twitter.com/kubo_robot?lang=en" target="_blank" class="fa fa-twitter"></a>
       <div class="scrolltop">
-        <img src="assets/images/scrolltop.png" alt="top" id="topscroll" onclick="scrollToTop();return false">
+        <img src="assets/images/scrolltop.png" alt="Scroll to top" id="topscroll" onclick="scrollToTop();return false">
     </div>
     </div>
   </footer>
