--- a/forum.html
+++ b/forum.html
@@ -8,6 +8,9 @@
   <title>Forum - KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/javascript.js" charset="utf-8"></script>
+  <meta property="og:title" content="Artifact Game Solutions" />
+  <meta property="og:description" content="We create a virtual reality">
+  <meta name="description" content="Artifact Game Solutions is your number one virtual reality innovator. We create virtual reality solutions for your needs. Virtual Reality is continuously evolving and we are making sure to always stay on top and have the latest technologies available.">
 </head>
 <body>
   <div class="logo_container">
@@ -116,9 +119,11 @@
           </p>
          </div>
          <div class="forum-container">
+           <a href="forum-inspiration.html">
            <h1 class="boks-titel">
              Undervisning
           </h1>
+        </a>
           <div class="traad-container">
             <h1 class="traad-titel">
               Hvordan får i eleverne til at lave lektier?
@@ -169,9 +174,11 @@
        </div>
        <div class="col-2">
          <div class="forum-container">
+           <a href="forum-inspiration.html">
            <h1 class="boks-titel">
              KUBO
           </h1>
+        </a>
           <div class="traad-container">
             <h1 class="traad-titel">
               Nogen der har erfaring med KUBO?
@@ -231,9 +238,11 @@
           </p>
          </div>
          <div class="forum-container">
+           <a href="forum-inspiration.html">
            <h1 class="boks-titel">
              Gode råd
-          </h1>
+          </h1
+          </a>
           <div class="traad-container">
             <h1 class="traad-titel">
               Hjææææælp, mig med at forstå..
