--- a/materialer.html
+++ b/materialer.html
@@ -7,11 +7,14 @@
   <title>Materialer - KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/javascript.js" charset="utf-8"></script>
+  <meta property="og:title" content="KEDU" />
+  <meta property="og:description" content="An online curriculum platform for teachers all around the world.">
+  <meta name="description" content="KUBO Education (or KEDU for short) is KUBO’s online curriculum platform. If you’re a teacher or educator, head on over to find tutorials, exercises, videos, and inspiration. You can also share your own knowledge about KUBO and how to use it with other teachers and educators around the world.">
 </head>
 <body>
   <div class="logo_container">
     <a href="index.html">
-    <img src="assets/images/kedu_logo.png" class="logo" alt="logo">
+    <img src="assets/images/kedu_logo.png" class="logo" alt="Logo">
     <a href="index.html"></a>
   </div>
     <nav>
@@ -49,7 +52,7 @@
       </h1>
       <div class="kursus">
         <div class="materialer-col-1">
-        <img src="assets/images/test.mand.png" class="kursus-billede">
+        <img src="assets/images/test.mand.png" alt="Kursus 1" class="kursus-billede">
       </div>
       <div class="materialer-col-2">
         <h2 class="kursus-titel">Bliv en haj til KEDU</h2>
@@ -60,7 +63,7 @@
       </div>
       <div class="kursus">
         <div class="materialer-col-1">
-        <img src="assets/images/kursus2.png" class="kursus-billede">
+        <img src="assets/images/kursus2.png" alt="Kursus 2" class="kursus-billede">
       </div>
       <div class="materialer-col-2">
         <h2 class="kursus-titel">Undervis med KUBO</h2>
@@ -71,7 +74,7 @@
       </div>
       <div class="kursus">
         <div class="materialer-col-1">
-        <img src="assets/images/kursus3.png" class="kursus-billede">
+        <img src="assets/images/kursus3.png" alt="Kursus 3" class="kursus-billede">
       </div>
       <div class="materialer-col-2">
         <h2 class="kursus-titel">Årsplaner</h2>
@@ -82,7 +85,7 @@
       </div>
       <div class="kursus">
         <div class="materialer-col-1">
-        <img src="assets/images/mand1.png" class="kursus-billede">
+        <img src="assets/images/mand1.png" alt="Kursus 4" class="kursus-billede">
       </div>
       <div class="materialer-col-2">
         <h2 class="kursus-titel">Førstehjælpskursus</h2>
@@ -93,7 +96,7 @@
       </div>
       <div class="kursus">
         <div class="materialer-col-1">
-        <img src="assets/images/mand2.png" class="kursus-billede">
+        <img src="assets/images/mand2.png" alt="Kursus 5" class="kursus-billede">
       </div>
       <div class="materialer-col-2">
         <h2 class="kursus-titel">Teambuilding og kanotur</h2>
@@ -109,7 +112,7 @@
       </h1>
       <section id="section-lektionsplaner">
       <div class="lektionsplan">
-        <img src="assets/images/lektionsplaner/001.jpg" class="lektionsplan-billede">
+        <img src="assets/images/lektionsplaner/001.jpg" alt="Dansk lektion" class="lektionsplan-billede">
         <h2 class="lektionsplan-titel">
           Dansk
         </h2>
@@ -117,14 +120,14 @@
           Klasse 0-2
         </p>
         <p class="lektionsplan-beskrivelse">
-          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+          Downloads - 8 <img src="assets/images/download.knap.png" alt="Antal downloads" class="kommentarerico">
         </p>
         <p class="lektionsplan-beskrivelse">
-          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" alt="Antal kommentarer" class="downloadico">
         </p>
       </div>
       <div class="lektionsplan">
-        <img src="assets/images/lektionsplaner/002.jpg" class="lektionsplan-billede">
+        <img src="assets/images/lektionsplaner/002.jpg" alt="Matematik lektion" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Matematik
         </h2>
@@ -132,14 +135,14 @@
           Klasse 0-2
         </p>
         <p class="lektionsplan-beskrivelse">
-          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+          Downloads - 8 <img src="assets/images/download.knap.png" alt="Antal downloads" class="kommentarerico">
         </p>
         <p class="lektionsplan-beskrivelse">
-          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" alt="Antal kommentarer" class="downloadico">
         </p>
       </div>
       <div class="lektionsplan">
-        <img src="assets/images/lektionsplaner/003.jpg" class="lektionsplan-billede">
+        <img src="assets/images/lektionsplaner/003.jpg" alt="Engelsk lektion" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Engelsk
         </h2>
@@ -147,14 +150,14 @@
           Klasse 0-2
         </p>
         <p class="lektionsplan-beskrivelse">
-          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+          Downloads - 8 <img src="assets/images/download.knap.png" alt="Antal downloads" class="kommentarerico">
         </p>
         <p class="lektionsplan-beskrivelse">
-          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" alt="Kommentarer" class="downloadico">
         </p>
       </div>
       <div class="lektionsplan">
-        <img src="assets/images/lektionsplaner/004.jpg" class="lektionsplan-billede">
+        <img src="assets/images/lektionsplaner/004.jpg" alt="Kodning med KUBO" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Kodning med KUBO
         </h2>
@@ -162,14 +165,14 @@
           Klasse 0-2
         </p>
         <p class="lektionsplan-beskrivelse">
-          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+          Downloads - 8 <img src="assets/images/download.knap.png" alt="Antal downloads" class="kommentarerico">
         </p>
         <p class="lektionsplan-beskrivelse">
-          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" alt="Antal kommentarer" class="downloadico">
         </p>
       </div>
       <div class="lektionsplan">
-        <img src="assets/images/lektionsplaner/005.jpg" class="lektionsplan-billede">
+        <img src="assets/images/lektionsplaner/005.jpg" alt="Kodning med KUBO 2" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Kodning med KUBO
         </h2>
@@ -177,10 +180,10 @@
           Klasse 0-2
         </p>
         <p class="lektionsplan-beskrivelse">
-          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+          Downloads - 8 <img src="assets/images/download.knap.png" alt="Antal downloads" class="kommentarerico">
         </p>
         <p class="lektionsplan-beskrivelse">
-          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" alt="Antal kommentarer" class="downloadico">
         </p>
       </div>
       </section>
