--- a/opgaver.html
+++ b/opgaver.html
@@ -8,6 +8,9 @@
   <title>Opgaver - KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/javascript.js" charset="utf-8"></script>
+  <meta property="og:title" content="KEDU" />
+  <meta property="og:description" content="An online curriculum platform for teachers all around the world.">
+  <meta name="description" content="KUBO Education (or KEDU for short) is KUBO’s online curriculum platform. If you’re a teacher or educator, head on over to find tutorials, exercises, videos, and inspiration. You can also share your own knowledge about KUBO and how to use it with other teachers and educators around the world.">
 </head>
 <body>
   <div class="logo_container">
@@ -38,17 +41,17 @@
      <div id="wrapper-opgaver">
        <div id="opgaver-container">
        <a href="opgaver-dansk.html" class="img-opgave1">Dansk</a>
-       <a href="#" class="img-opgave2">Matematik</a>
-       <a href="#" class="img-opgave3">Engelsk</a>
-       <a href="#" class="img-opgave4">Kodning</a>
-       <a href="#" class="img-opgave5">Tysk</a>
-       <a href="#" class="img-opgave6">Samfundsfag</a>
-       <a href="#" class="img-opgave7">Biologi</a>
-       <a href="#" class="img-opgave8">Geografi</a>
-       <a href="#" class="img-opgave9">Fysik</a>
-       <a href="#" class="img-opgave10">Idræt</a>
-       <a href="#" class="img-opgave11">Religion</a>
-       <a href="#" class="img-opgave12">Billedkunst</a>
+       <a href="#" alt="Matematik" class="img-opgave2">Matematik</a>
+       <a href="#" alt="Engelsk" class="img-opgave3">Engelsk</a>
+       <a href="#" alt="Kodning" class="img-opgave4">Kodning</a>
+       <a href="#" alt="Tysk" class="img-opgave5">Tysk</a>
+       <a href="#" alt="Samfundsfag" class="img-opgave6">Samfundsfag</a>
+       <a href="#" alt="Biologi" class="img-opgave7">Biologi</a>
+       <a href="#" alt="Geografi" class="img-opgave8">Geografi</a>
+       <a href="#" alt="Fysik" class="img-opgave9">Fysik</a>
+       <a href="#" alt="Idræt" class="img-opgave10">Idræt</a>
+       <a href="#" alt="Religion" class="img-opgave11">Religion</a>
+       <a href="#" alt="Billedkunst" class="img-opgave12">Billedkunst</a>
      </div>
      </div>
      <footer>
