--- a/minprofil.html
+++ b/minprofil.html
@@ -8,6 +8,9 @@
   <title>Min profil - KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/javascript.js" charset="utf-8"></script>
+  <meta property="og:title" content="KEDU" />
+  <meta property="og:description" content="An online curriculum platform for teachers all around the world.">
+  <meta name="description" content="KUBO Education (or KEDU for short) is KUBO’s online curriculum platform. If you’re a teacher or educator, head on over to find tutorials, exercises, videos, and inspiration. You can also share your own knowledge about KUBO and how to use it with other teachers and educators around the world.">
 </head>
 <body>
   <div class="logo_container">
@@ -35,13 +38,13 @@
           <div class="logout">
             <h2>Log ud</h2>
             <a href="signin.html">
-              <img src="assets/images/logout.png" alt="logout">
+              <img src="assets/images/logout.png" alt="Log ud">
             </a>
           </div>
           <div class="edit">
-            <h2>Rediger profil</h2>
+            <h2>Redigér profil</h2>
             <a href="#">
-              <img src="assets/images/edit.png" alt="edit">
+              <img src="assets/images/edit.png" alt="Redigér profil">
             </a>
           </div>
         </div>
@@ -54,7 +57,7 @@
           </h1>
           <div class="kursus">
             <div class="materialer-col-1">
-            <img src="assets/images/test.mand.png" class="kursus-billede">
+            <img src="assets/images/test.mand.png" alt="Billede af person 1" class="kursus-billede">
           </div>
           <div class="materialer-col-2">
             <h2 class="kursus-titel">Angående undervisning..</h2>
@@ -65,7 +68,7 @@
           </div>
           <div class="kursus">
             <div class="materialer-col-1">
-            <img src="assets/images/mand1.png" class="kursus-billede">
+            <img src="assets/images/mand1.png" alt="Billede af person 2" class="kursus-billede">
           </div>
           <div class="materialer-col-2">
             <h2 class="kursus-titel">Tak for hjælpen!</h2>
@@ -76,7 +79,7 @@
           </div>
           <div class="kursus">
             <div class="materialer-col-1">
-            <img src="assets/images/mand2.png" class="kursus-billede">
+            <img src="assets/images/mand2.png" alt="Billede af person 3" class="kursus-billede">
           </div>
           <div class="materialer-col-2">
             <h2 class="kursus-titel">Vend tilbage til mig</h2>
@@ -87,7 +90,7 @@
           </div>
           <div class="kursus">
             <div class="materialer-col-1">
-            <img src="assets/images/mand3.png" class="kursus-billede">
+            <img src="assets/images/mand3.png" alt="Billede af person 4" class="kursus-billede">
           </div>
           <div class="materialer-col-2">
             <h2 class="kursus-titel">Hvordan går det?</h2>
@@ -103,7 +106,7 @@
             <h1 class="boks-titel">
               Tim Nielsen
             </h1>
-            <img src="assets/images/mand1.jpg" class="img-userpic">
+            <img src="assets/images/mand1.jpg" alt="Profil billede" class="img-userpic">
             <p class="profile-description">
               Alder: 34<br />
               Skole: Nørreskov Skole<br />
@@ -117,7 +120,7 @@
               Favoritter
             </h1>
             <div class="lektionsplan">
-              <img src="assets/images/lektionsplaner/002.jpg" class="lektionsplan-billede">
+              <img src="assets/images/lektionsplaner/002.jpg" alt="Matematik" class="lektionsplan-billede">
               <h2 class="boks-hvidtekst">
                 Matematik
               </h2>
@@ -125,14 +128,14 @@
                 Klasse 0-2
               </p>
               <p class="lektionsplan-beskrivelse">
-                Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+                Downloads - 8 <img src="assets/images/download.knap.png" alt="Antal downloads" class="kommentarerico">
               </p>
               <p class="lektionsplan-beskrivelse">
-                Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+                Kommentarer - 11 <img src="assets/images/kommentarer.png" alt="Antal kommentarer" class="downloadico">
               </p>
             </div>
             <div class="lektionsplan">
-              <img src="assets/images/lektionsplaner/003.jpg" class="lektionsplan-billede">
+              <img src="assets/images/lektionsplaner/003.jpg" alt="Engelsk" class="lektionsplan-billede">
               <h2 class="boks-hvidtekst">
                 Engelsk
               </h2>
@@ -140,15 +143,15 @@
                 Klasse 0-2
               </p>
               <p class="lektionsplan-beskrivelse">
-                Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+                Downloads - 8 <img src="assets/images/download.knap.png" alt="Antal downloads" class="kommentarerico">
               </p>
               <p class="lektionsplan-beskrivelse">
-                Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+                Kommentarer - 11 <img src="assets/images/kommentarer.png" alt="Antal kommentarer" class="downloadico">
               </p>
             </div>
           </section>
           <section id="create">
-            <a href="#"><img src="assets/images/opload.knap.png" class="img-upload"></a>
+            <a href="#"><img src="assets/images/opload.knap.png" alt="Upload opgave" class="img-upload"></a>
           </section>
         </div>
       </div>
