--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -8,6 +8,9 @@
   <title>Opgaver - KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/javascript.js" charset="utf-8"></script>
+  <meta property="og:title" content="KEDU" />
+  <meta property="og:description" content="An online curriculum platform for teachers all around the world.">
+  <meta name="description" content="KUBO Education (or KEDU for short) is KUBO’s online curriculum platform. If you’re a teacher or educator, head on over to find tutorials, exercises, videos, and inspiration. You can also share your own knowledge about KUBO and how to use it with other teachers and educators around the world.">
 </head>
 <body>
   <div class="logo_container">
@@ -50,7 +53,7 @@
           </h1>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave1.png" class="opgave-billede">
+            <img src="assets/images/opgave1.png" alt="Klodser" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 1
             </p>
@@ -58,7 +61,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave2.png" class="opgave-billede">
+            <img src="assets/images/opgave2.png" alt="Dreng som leger på et gulvtæppe" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 2
             </p>
@@ -66,7 +69,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave3.png" class="opgave-billede">
+            <img src="assets/images/opgave3.png" alt="Brik" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 3
             </p>
@@ -74,7 +77,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave4.png" class="opgave-billede">
+            <img src="assets/images/opgave4.png" alt="2 piger" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 4
             </p>
@@ -82,7 +85,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave5.png" class="opgave-billede">
+            <img src="assets/images/opgave5.png" alt="Pige der skriver" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 5
             </p>
@@ -90,7 +93,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave6.png" class="opgave-billede">
+            <img src="assets/images/opgave6.png" alt="Blyant" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 6
             </p>
@@ -98,7 +101,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave7.png" class="opgave-billede">
+            <img src="assets/images/opgave7.png" alt="Fodbold" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 7
             </p>
@@ -106,7 +109,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave8.png" class="opgave-billede">
+            <img src="assets/images/opgave8.png" alt="Sjov undervisning" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 8
             </p>
@@ -114,7 +117,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave9.png" class="opgave-billede">
+            <img src="assets/images/opgave9.png" alt="Lexikon" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 9
             </p>
@@ -122,7 +125,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave10.png" class="opgave-billede">
+            <img src="assets/images/opgave10.png" alt="Bord med blyanter og farver" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 10
             </p>
@@ -130,7 +133,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave11.png" class="opgave-billede">
+            <img src="assets/images/opgave11.png" alt="Børn der undervises" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 11
             </p>
@@ -138,7 +141,7 @@
           </div>
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
-            <img src="assets/images/opgave12.png" class="opgave-billede">
+            <img src="assets/images/opgave12.png" alt="Et barns tegning" class="opgave-billede">
             <p class="boks-opgtekst">
               Opgave 12
             </p>
