--- a/opgaver.html
+++ b/opgaver.html
@@ -41,17 +41,17 @@
      <div id="wrapper-opgaver">
        <div id="opgaver-container">
        <a href="opgaver-dansk.html" class="img-opgave1">Dansk</a>
-       <a href="#" alt="Matematik" class="img-opgave2">Matematik</a>
-       <a href="#" alt="Engelsk" class="img-opgave3">Engelsk</a>
-       <a href="#" alt="Kodning" class="img-opgave4">Kodning</a>
-       <a href="#" alt="Tysk" class="img-opgave5">Tysk</a>
-       <a href="#" alt="Samfundsfag" class="img-opgave6">Samfundsfag</a>
-       <a href="#" alt="Biologi" class="img-opgave7">Biologi</a>
-       <a href="#" alt="Geografi" class="img-opgave8">Geografi</a>
-       <a href="#" alt="Fysik" class="img-opgave9">Fysik</a>
-       <a href="#" alt="Idræt" class="img-opgave10">Idræt</a>
-       <a href="#" alt="Religion" class="img-opgave11">Religion</a>
-       <a href="#" alt="Billedkunst" class="img-opgave12">Billedkunst</a>
+       <a href="opgaver-dansk.html" alt="Matematik" class="img-opgave2">Matematik</a>
+       <a href="opgaver-dansk.html" alt="Engelsk" class="img-opgave3">Engelsk</a>
+       <a href="opgaver-dansk.html" alt="Kodning" class="img-opgave4">Kodning</a>
+       <a href="opgaver-dansk.html" alt="Tysk" class="img-opgave5">Tysk</a>
+       <a href="opgaver-dansk.html" alt="Samfundsfag" class="img-opgave6">Samfundsfag</a>
+       <a href="opgaver-dansk.html" alt="Biologi" class="img-opgave7">Biologi</a>
+       <a href="opgaver-dansk.html" alt="Geografi" class="img-opgave8">Geografi</a>
+       <a href="opgaver-dansk.html" alt="Fysik" class="img-opgave9">Fysik</a>
+       <a href="opgaver-dansk.html" alt="Idræt" class="img-opgave10">Idræt</a>
+       <a href="opgaver-dansk.html" alt="Religion" class="img-opgave11">Religion</a>
+       <a href="opgaver-dansk.html" alt="Billedkunst" class="img-opgave12">Billedkunst</a>
      </div>
      </div>
      <footer>
