--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -35,15 +35,15 @@
           <h1 id="page-title">
             <a href="opgaver.html">Opgaver</a> / <a href="opgaver-dansk.html">Dansk</a> / Retstavning
           </h1>
-          <div class="choices">
-            <h2>Sorter</h2>
-            <div class="fa fa-caret-square-o-down">
+          <div class="filter_search">
+            <div class="filter">
+              <h2>Filter</h2>
+              <div class="fa fa-caret-square-o-down">
+              </div>
             </div>
+            <input class="search" type="text" name="search" placeholder="   Søg">
+            </input>
           </div>
-          <div class="search">
-            <h2>Søg</h2>
-          </div>
-
         </div>
     </header>
       <div id="wrapper-opgaver">
