Start på styleguide side

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -3,8 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <header>
+    </header>
+    <div id="wrapper">
+      <div id="col-1">
+    <aside id="nav">
+      <ul>
+        <a href="#typografi"><li>Typografi</li></a>
+        <a href="#farver"><li>Farver</li></a>
+        <a href="#logo"><li>Logo</li></a>
+        <a href="#navigation"><li>Navigation</li></a>
+        <a href="#kontainere"><li>Kontainere</li></a>
+      </ul>
+    </aside>
+      </div>
+      <div id="col-2">
+    <section id="content">
+      <section id="typografi">
+        <h1 class="title">Typgrafi</h1>
+      </section>
+      <section id="farver">
+      </section>
+      <section id="logo">
+      </section>
+      <section id="navigation">
+      </section>
+      <section id="kontainere">
+      </section>
+      Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in. Ei pri laudem alterum, sit in ocurreret dissentiunt, eirmod omnesque ne sea.
+    </section>
+      </div>
+  </div>
+  <footer>
+  </footer>
   </body>
 </html>
