--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -23,7 +23,7 @@
       <div id="col-2">
     <section id="content">
       <section id="typografi">
-        <h1 class="title">Typgrafi</h1>
+        <h1 class="title">Typografi</h1>
       </section>
       <section id="farver">
       </section>
