--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -24,6 +24,9 @@
     <section id="content">
       <section id="typografi">
         <h1 class="title">Typografi</h1>
+        <div class="typo-container">
+          sadasdas
+        </div>
       </section>
       <section id="farver">
       </section>
