--- a/opgave-forholdsord.html
+++ b/opgave-forholdsord.html
@@ -62,7 +62,7 @@
             <p class="opg-beskrivelse"> Matrialer <br></<b> Parpir, Blyant</p>
             <p class="opg-beskrivelse">In nam tempor delectus, ea tempor intellegat voluptaria per. Vel dico etiam equidem ex, ex alia fierent appellantur eam. Et sed eripuit disputando. Commune facilisi reformidans usu ex, pro ad graecis adipisci consequat.</p>
           </div>
-          <a href="#"><img src="assets/images/download.knap.png" class="img-download"></a>
+          <a href="#"><img src="assets/images/hent.opgave.png" class="img-download"></a>
         </div>
       </div>
     </div>
