--- a/opgave-forholdsord.html
+++ b/opgave-forholdsord.html
@@ -33,7 +33,7 @@
       <div id="header_container">
         <div id="header-cover">
           <h1 id="page-title">
-            Opgaver
+            <a href="opgaver.html">Opgaver</a> / <a href="opgaver-dansk.html">Dansk</a> / <a href="opgaver-dansk-retstavning.html">Retstavning</a>  / Forholdsord
           </h1>
         </div>
     </header>
