--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -25,7 +25,10 @@
       <section id="typografi">
         <h1 class="title">Typografi</h1>
         <div class="typo-container">
-          sadasdas
+          <h1>Header level 1</h1>
+        </div>
+        <div class="typo-container">
+          <h2>Header level 2</h2>
         </div>
       </section>
       <section id="farver">
