BAGGRUND FJERNET PÅ DL KNAP

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <img src="logo-white.png" alt="Logo" id="logo">
     </header>
     <div id="wrapper">
       <div id="col-1">
