--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -30,6 +30,12 @@
         <div class="typo-container">
           <h2>Header level 2</h2>
         </div>
+        <div class="typo-container">
+          <h3>Header level 3</h3>
+        </div>
+        <div class="typo-container">
+          <p class="description">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in. Ei pri laudem alterum, sit in ocurreret dissentiunt, eirmod omnesque ne sea.</p>
+        </div>
       </section>
       <section id="farver">
       </section>
