--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="logo-white.png" alt="Logo" id="logo">
+      <img src="logo-white.png" alt="Logo" id="logo-center">
     </header>
     <div id="wrapper">
       <div id="col-1">
@@ -24,7 +24,7 @@
       <div id="col-2">
     <section id="content">
       <section id="typografi">
-        <h1 class="title">Typografi</h1>
+        <h1 class="section-title">Typografi</h1>
         <div class="typo-container">
           <h1>Header level 1</h1>
         </div>
@@ -39,12 +39,26 @@
         </div>
       </section>
       <section id="farver">
+        <h1 class="section-title">
+          Farver
+        </h1>
+        <p class="description">
+        </p>
       </section>
       <section id="logo">
+        <h1 class="section-title">
+          Logo
+        </h1>
       </section>
       <section id="navigation">
+        <h1 class="section-title">
+          Navigation
+        </h1>
       </section>
       <section id="kontainere">
+        <h1 class="section-title">
+          Kontainere
+        </h1>
       </section>
       Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in. Ei pri laudem alterum, sit in ocurreret dissentiunt, eirmod omnesque ne sea.
     </section>
