Færdig med farver

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -42,13 +42,37 @@
         <h1 class="section-title">
           Farver
         </h1>
-        <p class="description">
-        </p>
+          <div class="primary-color">
+          </div>
+          <p class="color-example">
+            Primær farve<br />
+            #044c7f
+          </p>
+          <div class="secondary-color">
+          </div>
+            <p class="color-example">
+              Sekundær farve<br />
+              #216393
+            </p>
+          <div class="optional-color">
+          </div>
+          <p class="color-example">
+            Valgfri farve<br />
+            #00a19b
+          </p>
       </section>
       <section id="logo">
         <h1 class="section-title">
           Logo
         </h1>
+        <p class="description">
+          <img src="logo-default.png" class="logo-example">
+          Standard logo<br />
+          175x58px
+          <img src="logo-white.png" class="logo-example">
+          Sekundær logo<br />
+          175x58px
+        </p>
       </section>
       <section id="navigation">
         <h1 class="section-title">
