--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -16,7 +16,7 @@
         <a href="#typografi"><li>Typografi</li></a>
         <a href="#farver"><li>Farver</li></a>
         <a href="#logo"><li>Logo</li></a>
-        <a href="#navigation"><li>Navigation</li></a>
+        <a href="#knapper"><li>Knapper</li></a>
         <a href="#kontainere"><li>Kontainere</li></a>
       </ul>
     </aside>
@@ -50,10 +50,21 @@
           Logo
         </h1>
       </section>
-      <section id="navigation">
+      <section id="button">
         <h1 class="section-title">
-          Navigation
+          Knapper
         </h1>
+        <div class="button-wrapper">
+          <div class="profile-button">
+            Profile buttons
+          </div>
+          <div class="nav-button">
+            Navigation buttons
+          </div>
+          <div class="comment-button">
+            Comment button
+          </div>
+        </div>
       </section>
       <section id="kontainere">
         <h1 class="section-title">
